# Kaggle-Capstone

./: .gitignore  Dockerfile  README.md  app.py  database.py  mcp_server.py  orchestrator.py  pyproject.toml  skills.py
.streamlit/: config.toml
submission/: create_presentation.py  kaggle_writeup.md  presentation.pptx  video_guide.md
