[project]
name = "runtime-terrors-companion"
version = "0.1.0"
description = "Multi-Agent AI Study & Athletic Performance Companion"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "google-genai>=2.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "python-pptx>=1.0.0",
    "pypdfium2>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "mcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

